# tlserver

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  config.sample.toml  config.toml  dictionary.sample.json  llm.py  offline.py  pyproject.toml  requirements.txt  server_main.py  translator.py
src/tlserver/: __main__.py  config.py  handler.py  plugins.py  server_main.py  translator.py
src/tlserver/translators/: llm.py  offline.py
